# blog.greghale.io

./: .gitignore  CNAME  README.md  about.rst  blog-greghale-io.cabal  config.toml  contact.markdown  default.nix  index.html  new_entry.py  shell.nix  shells.nix  site.hs  vertigo.hs
.github/workflows/: deploy.yml
content/: _index.md
content/pages/: about.md
content/posts/: 2019-10-17-config-phase.md  2019-10-20-typechecking-posts.md  2019-12-20-vertigo.md  2023-01-25-vertigo-chart.md  2023-11-23-claude-winner-takes-all.md  2024-01-20-video-reflection.md  2025-10-10-jj-for-vibe-coding.md  2025-10-24-ai-consciousness.md  2025-11-11-stochastic-parrot.md  2025-11-12-saltatory-consciousness.md  2025-11-14-saltatory-extensions.md  2025-11-26-a-neuroscientists-lament.md  2025-11-28-burn-project-1.md  2025-11-28-burn-project.md  2025-11-30-meet-your-doppelganger.md  (+2 more)
css/: default.css
data/: vertigo-chart.csv
docs/: 404.html  about.html  archive.html  contact.html  index.html  rss.xml  sitemap.xml
drafts/: 2025-10-16-vibelearning.md
generator/: blog-greghale-io.cabal  default.nix
posts/: 2019-10-17-config-phase.lhs  2019-10-20-typechecking-posts.md  2019-12-20-vertigo.md  2020-11-17-focus-on-fundamentals.md  2023-01-25-vertigo-chart.md  2023-03-24-gpt4-neuron-schema.html  2023-07-15-htmx-difficult-bits.md  2023-11-23-claude-winner-takes-all.md  2024-01-20-video-reflection.md  2025-10-10-jj-for-vibe-coding.md  2025-10-24-ai-consciousness.md
public/: index.html  robots.txt  rss.xml
static/js/: epley.js  (+1 more)
templates/: default.html  index.html  page.html  post.html
(+71 files in other folders)
